Fix - image alignment, vertical alignment

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .mail-page {
-    width: calc(100% - 44px);
+    width: available;
     margin-left: 22px;
     margin-right: 22px;
     min-height: 100%;
@@ -56,6 +56,11 @@ body {
     display: inline-block;
 }
 
+.yandex-service-logo__image {
+    width: 153px;
+    height: 31px;
+}
+
 .header-search-bar {
     width: 35%;
     margin-left: 12.5%;
@@ -64,8 +69,7 @@ body {
     height: 32px;
     padding-left: 16px;
 
-    font-size: 15px;
-    font-family: YandexSanThin, sans-serif;
+    font: 15px YandexSanThin, sans-serif ;
     line-height: 2;
     color: #000;
     opacity: 0.4;
@@ -223,7 +227,7 @@ body {
     height: 30px;
     line-height: 30px;
     border-radius: 100px;
-    background-color: #ff3333;
+    background-color: #f33;
     color: #fff;
     text-align: center;
 }
@@ -249,6 +253,7 @@ body {
     height: 10px;
     margin-left: 10px;
     margin-right: 10px;
+    margin-bottom: 4px;
 }
 
 .unread-mark {
@@ -258,7 +263,6 @@ body {
 
 .subject {
     display: inline-block;
-    position: relative;
     float: left;
     width: 100%;
     margin: 0;
@@ -323,7 +327,6 @@ body {
 .first-message {
     position: relative;
     display: none;
-    height: 100%;
     min-height: 500px;
     top: 0;
     z-index: 1;
@@ -332,6 +335,7 @@ body {
 }
 
 .first-message-text {
+    overflow:auto;
     padding: 20px;
     font-family: "Helvetica Neue", sans-serif;
     font-size: 14px;
